<resources>
    <string name="app_name">Sistema ABO</string>
    <string name="o_que_e_sangue">O sangue é um fluido vital que circula pelo nosso corpo, desempenhando um papel fundamental no funcionamento do organismo. Composto por uma mistura de células, plasma e substâncias químicas, o sangue é responsável por transportar oxigênio e nutrientes para as células, eliminar resíduos metabólicos, regular a temperatura do corpo e atuar no sistema imunológico.</string>
    <string name="tipos_de_sangue">Existem quatro tipos sanguíneos principais: A, B, AB e O. Cada tipo é determinado pela presença ou ausência de certos antígenos na superfície das células vermelhas do sangue. Além disso, o fator Rh, que pode ser positivo (+) ou negativo (-), também é importante para determinar a compatibilidade sanguínea. Essas diferenças são cruciais em transfusões de sangue, uma vez que a incompatibilidade pode resultar em reações graves.</string>
    <string name="importancia_da_doacao">A doação de sangue desempenha um papel crucial na área da saúde, pois é a principal fonte de sangue utilizado em transfusões para pacientes que precisam de cirurgias, tratamentos contra o câncer, vítimas de acidentes e outras situações médicas críticas. Além disso, a doação de sangue é essencial em situações de desastres naturais e crises de saúde pública, como a pandemia da COVID-19, para garantir que os hospitais tenham suprimentos adequados para atender a demanda.</string>
    <string name="como_doar_sangue">Doar sangue é um ato simples e seguro, que pode salvar vidas. O primeiro passo é encontrar um centro de coleta de sangue ou um banco de sangue próximo à sua localização. Antes de doar, é importante atender a critérios específicos, como ter idade adequada, estar saudável, não ter comportamentos de risco para doenças transmissíveis pelo sangue e não estar grávida, entre outros. Após uma breve avaliação médica, o doador pode realizar a doação, que geralmente leva cerca de 10 a 15 minutos. Depois da doação, é recomendável descansar e se alimentar para se recuperar completamente.</string>

    <string name="funcao_hematopoiese">A hematopoiese é o processo de formação de células sanguíneas no corpo, ocorrendo principalmente na medula óssea. Essas células incluem glóbulos vermelhos, glóbulos brancos e plaquetas, que desempenham papéis cruciais na manutenção da saúde do organismo.</string>

    <string name="plasma_sanguineo">O plasma sanguíneo é a parte líquida do sangue que constitui a maior parte do volume sanguíneo. É composto por água, proteínas, hormônios, nutrientes e resíduos. O plasma desempenha um papel importante no transporte de substâncias e na regulação da pressão osmótica.</string>

    <string name="doacao_plaquetas">Além da doação de sangue inteiro, é possível doar plaquetas, que são essenciais na coagulação sanguínea. As plaquetas doadas são frequentemente usadas em tratamentos de câncer e para pacientes com distúrbios de coagulação.</string>

    <string name="doacao_plasma">A doação de plasma é outra forma crucial de contribuir para a saúde. O plasma doado é frequentemente usado na fabricação de medicamentos e produtos sanguíneos para tratar uma variedade de condições médicas.</string>

    <string name="fator_rh">O fator Rh, também conhecido como o fator positivo (+) ou negativo (-), desempenha um papel importante na determinação da compatibilidade sanguínea. Conhecer o fator Rh é fundamental em transfusões e gravidez, onde a incompatibilidade pode causar problemas de saúde.</string>
    <string name="conte_do">CONTEÚDO</string>
    <string name="o_que_sangue">O que é sangue?</string>
    <string name="tipos_de_sangue_stri">Tipos de sangue</string>
    <string name="import_ncia_da_doa_o">Importância da doação</string>
    <string name="como_doar_sangue_stri">Como doar sangue</string>
    <string name="fun_o_hematopoiese">Função Hematopoiese</string>
    <string name="fator_rh_stri">Fator RH</string>
    <string name="doa_o_de_plasma">Doação de Plasma</string>
    <string name="doa_o_de_plaquetas">Doação de Plaquetas</string>
    <string name="plasma_sangu_neo">Plasma Sanguíneo</string>
    <string name="sair">Sair</string>
    <string name="amostras_de_sangue_coletadas">Amostras de sangue coletadas</string>

</resources>