<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConteudoActivity"
    android:background="@color/background">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
                android:src="@drawable/btnsetaesquerda" />

            <LinearLayout
                android:id="@+id/tituloLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conte_do"
                    android:textSize="50sp"
                    android:textColor="@color/red"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/tituloLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/o_que_sangue"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_que_e_sangue"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipos_de_sangue_stri"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipos_de_sangue"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/sangue1"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amostras_de_sangue_coletadas"
                    android:textColor="@color/black"
                    android:textSize="18sp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/import_ncia_da_doa_o"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/importancia_da_doacao"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/como_doar_sangue_stri"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/como_doar_sangue"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fun_o_hematopoiese"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funcao_hematopoiese"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plasma_sangu_neo"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plasma_sanguineo"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doa_o_de_plaquetas"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doacao_plaquetas"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doa_o_de_plasma"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doacao_plasma"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/sangue3"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Amostras de plasma"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fator_rh_stri"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fator_rh"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:src="@drawable/sangue2"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quem doa sangue para quem"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
